--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/codeschool/babel-with-gulp#readme",
   "devDependencies": {
+    "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.1.18",
     "babelify": "^7.2.0",
     "browser-sync": "^2.12.12",
@@ -36,6 +37,8 @@
     "gulp-uglify": "^1.5.3",
     "immutable": "^3.8.1",
     "normalize.css": "^4.1.1",
+    "redux-logger": "^2.6.1",
+    "redux-thunk": "^2.1.0",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.7.0"
