--- a/package.json
+++ b/package.json
@@ -1,27 +1,28 @@
 {
-  "name": "babel-with-gulp",
-  "version": "1.0.0",
-  "description": "Starter code for using Babel with Gulp",
+  "name": "MyGeotab BI Sandbox",
+  "version": "0.0.1",
+  "description": "Starter code for MyGeotab BI.",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "gulp watch"
   },
-  "author": "Carlos Souza <carloshrsouza@gmail.com> (http://csouza.me/)",
-  "license": "ISC",
+  "author": "Bernie Cheng <bernardcheng@geotab.com>",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/codeschool/babel-with-gulp.git"
+    "url": "https://github.com/Geotab"
   },
   "keywords": [
     "babel",
     "gulp",
-    "es2015"
+    "es2015",
+    "redux"
   ],
   "bugs": {
-    "url": "https://github.com/codeschool/babel-with-gulp/issues"
+    "url": "https://github.com/Geotab"
   },
-  "homepage": "https://github.com/codeschool/babel-with-gulp#readme",
+  "homepage": "https://github.com/Geotab",
   "devDependencies": {
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-es2015": "^6.1.18",
